# NYSM

./: .gitignore  CLAUDE.md  LICENSE  README.md  explotation.txt  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/assets/: movies_database.db
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  lib.rs  main.rs  search.rs  settings.rs  types.rs
src/lib/: types.ts
src/lib/components/: MovieCard.svelte  MovieDetailModal.svelte  SettingsModal.svelte
src/lib/stores/: settings.ts
src/routes/: +page.svelte
